# VOPlanner

./: README.md  pyproject.toml
src/voplanner/: locations.py  oplanner_main.py  query.py  setups.py  voplanner_main.py
src/voplanner/config/: plan_config.config  targets_list.csv
