[build-system]
requires = ["setuptools>=75.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VOPlanner"
version = "0"
description = "Package plan astronomical observations using astroplan."
readme = "README.md"
requires-python = ">=3.0"
license = {text = "MIT"}
authors = [
    { name = "Varghese Reji", email = "varghesereji0007@gmail.com" }
]
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.21",
    "astroplan",
    "mplcursors"
]
keywords = ["example", "package"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/varghesereji/OPlanner"
"Repository" = "https://github.com/varghesereji/OPlanner"

[project.scripts]
voplanner = "voplanner.voplanner_main:main"

# [tool.setuptools.package-data]
# "toirex" = ["data/*", "config/*"]

